Fixed sidebar text spacing issues with a (temporary) hotfix style="margin: 0 10px 10px;"

--- a/assets/css/bootstrap-theme.css
+++ b/assets/css/bootstrap-theme.css
@@ -3,6 +3,11 @@
  * Copyright 2011-2016 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
  */
+
+.hotfixOne {
+    margin: 0 10px 10px;
+}
+
 .map {
     cursor: pointer;
     max-height: 100%;
